--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ios": "react-native run-ios",
     "macos": "react-native run-macos",
     "web": "react-scripts start",
+    "windows": "react-native run-windows",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
@@ -17,7 +18,8 @@
     "react-native": "0.63.3",
     "react-native-macos": "0.63.1",
     "react-native-web": "0.14.8",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-native-windows": "^0.63.0-0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
